--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "suaip",
-  "version": "0.0.0",
+  "version": "0.5.0",
   "authors": [
     "José Miguel Molina <hi@mvader.me>"
   ],
@@ -16,7 +16,7 @@
     "gestures"
   ],
   "dependencies": {
-    "hammer.js": "2.*"
+    "hammer.js": "1.1.3"
   },
   "license": "MIT",
   "homepage": "https://github.com/mvader/suaip",
